NHL Project - Assignment 1 Applied Modeling

--- a/Nick_George_Assignment_1_Applied_Modeling.ipynb
+++ b/Nick_George_Assignment_1_Applied_Modeling.ipynb
@@ -513,11 +513,7 @@
       "metadata": {
         "id": "VCKfVNZ0VvDa",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 626
-        },
-        "outputId": "93d69cb2-531e-4ff6-ad7f-144317437ec6"
+        "colab": {}
       },
       "source": [
         "#seasons\n",
@@ -528,12 +524,54 @@
         "\n",
         "#in case seasons started early one year\n",
         "#2010 to 2011 season\n",
-        "te_season = (df['date_time'] > '2010-09-01') & (df['date_time'] < '2011-07-01')\n",
+        "season_10to11 = (df['date_time'] > '2010-09-01') & (df['date_time'] < '2011-07-01')\n",
+        "\n",
+        "#2011 to 2012\n",
+        "season_11to12 = (df['date_time'] > '2011-09-01') & (df['date_time'] < '2012-07-01')\n",
+        "\n",
+        "#2012 to 2013\n",
+        "season_12to13 = (df['date_time'] > '2012-09-01') & (df['date_time'] < '2013-07-01')\n",
+        "\n",
+        "#2013 to 2014\n",
+        "season_13to14 = (df['date_time'] > '2013-09-01') & (df['date_time'] < '2014-07-01')\n",
+        "\n",
+        "#2014 to 2015\n",
+        "season_14to15 = (df['date_time'] > '2014-09-01') & (df['date_time'] < '2015-07-01')\n",
+        "\n",
+        "#2015 to 2016\n",
+        "season_15to16 = (df['date_time'] > '2015-09-01') & (df['date_time'] < '2016-07-01')\n",
+        "\n",
+        "#2016 to 2017\n",
+        "season_16to17 = (df['date_time'] > '2016-09-01') & (df['date_time'] < '2017-07-01')\n",
+        "\n",
+        "#2017 to 2018\n",
+        "season_17to18 = (df['date_time'] > '2017-09-01') & (df['date_time'] < '2018-07-01')\n",
+        "\n",
+        "#2018 to 2019\n",
+        "season_18to19 = (df['date_time'] > '2018-09-01') & (df['date_time'] < '2019-07-01')\n",
+        "\n",
+        "#need to try to implement a function here"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P8Ue6oyioinz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 626
+        },
+        "outputId": "c0caaa3c-4ff0-4caa-942c-54292b3f3624"
+      },
+      "source": [
         "#pass the season condition, sort season from beginning to end\n",
-        "df_10to11 = df[te_season].sort_values(by=['date_time'])\n",
+        "df_10to11 = df[season_10to11].sort_values(by=['date_time'])\n",
         "df_10to11"
       ],
-      "execution_count": 58,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +848,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 62
         }
       ]
     },
